--- a/FightingGame/Assets/Tests/Tests.asmdef
+++ b/FightingGame/Assets/Tests/Tests.asmdef
@@ -4,7 +4,9 @@
     "references": [
         "UnityEngine.TestRunner",
         "UnityEditor.TestRunner",
-        "Source"
+        "Source",
+        "FGEditor",
+        "FGPlatform.Library"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
