--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,3 @@
 FightingGame filter=lfs diff=lfs merge=lfs -text
-README.md filter=lfs diff=lfs merge=lfs -text
+filter=lfs diff=lfs merge=lfs -text
 UserSettings filter=lfs diff=lfs merge=lfs -text
