[솔휘] plugin bundle lfs 세팅

--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,4 @@
 FightingGame filter=lfs diff=lfs merge=lfs -text
 filter=lfs diff=lfs merge=lfs -text
 UserSettings filter=lfs diff=lfs merge=lfs -text
+FightingGame/Assets/Firebase/Plugins/x86_64/FirebaseCppApp-11_0_0.bundle filter=lfs diff=lfs merge=lfs -text
